# autoresearch_manim_finetune

./: .gitignore  README.md  backprop_scene.py  program.md  pyproject.toml
.githooks/: pre-commit
configs/: adk_api_model_benchmark_full.json  adk_minimax_benchmark_full.json  adk_nvidia_benchmark_full.json  adk_qwen36plus_benchmark_full.json  adk_xiaomi_skill_benchmark.json  adk_xiaomi_skill_benchmark_full.json  bonsai_8b_mlx_1bit.json  local_mlx_model_benchmark.json  m4_max_qwen25coder_3b.json  m4_max_qwen25coder_3b_gold_silver.json  m4_max_qwen25coder_3b_release_render.json  m4_max_qwen25coder_3b_with_longform.json  m4_max_qwen25coder_3b_without_longform.json  openrouter_frontier_benchmark.json  openrouter_nvidia_benchmark_full.json  openrouter_skill_benchmark.json
data/: manim_3b1b_style_cases.json  manim_animation_cases.json  manim_bootstrap_cases.jsonl  manim_composite_longform_cases.json  manim_converted_cases.jsonl  manim_converted_cases_round2.jsonl  manim_converted_cases_round3.json  manim_coverage_expansion_cases.json  manim_cross_category_expansion_cases.json  manim_dataset.jsonl  manim_docs_feature_cases.jsonl  manim_docs_feature_sources.json  manim_docs_seed_cases.jsonl  manim_docs_sources.json  manim_domain_expansion_cases.json  manim_domain_expansion_cases_round2.json  manim_feature_fusion_cases.json  manim_full_bootstrap_cases.jsonl  manim_full_bootstrap_cases_v2.jsonl  manim_longform_cases.json  manim_physics_expansion_cases_round2.json  manim_repo_custom_candidates.jsonl  manim_repo_plain_candidates.jsonl  manim_repo_plain_verified.jsonl  (+24 more)
(+64 files in other folders)
