[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous pretraining research swarm"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "datasets>=4.3.0",
    "huggingface-hub>=0.36.0",
    "matplotlib>=3.10.8",
    "manim>=0.20.1; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-lm[train]>=0.31.1; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "kernels>=0.11.7; sys_platform != 'darwin'",
    "torch==2.9.1; sys_platform != 'darwin'",
]

[project.optional-dependencies]
weco = [
    "weco>=0.3.25",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
